# latam-challenge

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  Makefile  main.py  pyproject.toml
.github/workflows/: cd.yml  ci.yml
challenge/: api.py  exploration.ipynb  model.py  schemas.py
docs/: challenge.md
