[project]
name = "latam-challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi~=0.86.0",
    "numpy~=1.22.4",
    "pandas~=1.3.5",
    "pydantic~=1.10.2",
    "scikit-learn~=1.3.0",
    "uvicorn~=0.15.0",
]

[dependency-groups]
dev = [
    "detect-secrets>=1.5.0",
    "matplotlib~=3.7.2",
    "pre-commit>=4.5.0",
    "seaborn~=0.12.2",
]
test = [
    "coverage~=5.5",
    "locust~=1.6",
    "mockito~=1.2.2",
    "pytest~=6.2.5",
    "pytest-cov~=2.12.1",
]
